force-app/main/default/objects/Quote_Bill_To__c/Quote_Bill_To__c.object-meta.xml
<CustomObject>
    <label>Quote Bill To</label>
    <nameField>
        <displayFormat>QB-{00000}</displayFormat>
        <label>Quote Bill To Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Bill To</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>