force-app/main/default/objects/Quote_Bill_To__c/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To</label>
    <referenceTo>Bill_To__c</referenceTo>
    <relationshipLabel>Quote Bill To</relationshipLabel>
    <relationshipName>Quote_Bill_To</relationshipName>
    <type>Lookup</type>
</CustomField>