force-app/main/default/objects/Quote_Bill_To__c/fields/Bill_To_Country__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Country__c</fullName>
    <formula>text(Bill_To__r.Country__c)</formula>
    <label>Country</label>
    <type>Text</type>
</CustomField>