force-app/main/default/objects/Quote_Bill_To__c/fields/Bill_To_Default_Currency__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Default_Currency__c</fullName>
    <formula>text(Bill_To__r.Default_Currency__c)</formula>
    <label>Default Currency</label>
    <type>Text</type>
</CustomField>