force-app/main/default/objects/Quote_Bill_To__c/fields/Bill_To_Description__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Description__c</fullName>
    <formula>Bill_To__r.Description__c</formula>
    <label>Description</label>
    <type>Text</type>
</CustomField>