force-app/main/default/objects/Quote_Bill_To__c/fields/Bill_To_ERP_Number__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_ERP_Number__c</fullName>
    <formula>Bill_To__r.ERP_Number__c</formula>
    <label>ERP Number</label>
    <type>Text</type>
</CustomField>