force-app/main/default/objects/Quote_Bill_To__c/fields/Bill_To_Legacy_System__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Legacy_System__c</fullName>
    <formula>text(Bill_To__r.Legacy_System__c)</formula>
    <label>Legacy System</label>
    <type>Text</type>
</CustomField>