force-app/main/default/objects/Quote_Bill_To__c/fields/PROS_Quote__c.field-meta.xml
<CustomField>
    <fullName>PROS_Quote__c</fullName>
    <label>PROS Quote</label>
    <referenceTo>CameleonCPQ__Quote__c</referenceTo>
    <relationshipLabel>Quote Bill To</relationshipLabel>
    <relationshipName>Quote_Bill_To</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>